  * The error while creating cache directory is corrected
  * Added all aviable stations for USA, Poland, Finland
  * The error at displaying temperature while data not aviable is corrected
  * The possibility to change temperature order is supplemented
  * The possibility to separate current weather is supplemented
  * The possibility to select weather data valid time is supplemented

0.17.2
  * The problem of exit out of range of the array has been fixed. This problem rebooted desktop.
  * The problem with blocking connectivity icon is solved
  * The error with station adding/removal, leading to destruction of a desktop, is corrected
  * The algorithm of processing of events is corrected
  * Small leak of memory is corrected
  
0.17.1
  * New periods to the select of automatic update has been added
  * The work of automatic update has been corrected
  * Fix bug - The applet crashes Desktop after switching off the plugin
  * Fix memory leaks  
  * Fix problem with station list creation
  * Fix problem with destroy window preference after pressed about button

0.17
  * Added version number to the About dialog
  * Added possible to rename station name
  * Add more stations
  * Correct display order for temperature
  * Added data for atmospheric pressure
  * Added choice of units for wind speed
  * Added support i18n system
  * Added icon in deb packet
  * Fix memory leaks
  * Fix bug with station selection
  * Fix bug with empty locations list
  * The curl library for update forecast is used
  * Proxy settings on Maemo is used
  * After adding the new station, forecast is downloaded automaticly
  * Translate to Russian
  * Fix problem with stations in New York, New Mexico, New Jersey, New Hampshire, Nebraska states of USA

0.16
  * OS 2007 compatibility: focus from the first button for OS2007 is removed
  * OS 2007 compatibility: the opportunity of change of the size of an applet is made
  * Added choice of units for distance
  * Added choice icon set